# src-python-example

./: README.md  environment.yml  main.py  pyproject.toml  requirements.txt
data/output_data/: forest.dbf  forest.shp  forest.shx
data/output_data/Results/: landuse_allotments.dbf  landuse_allotments.shp  landuse_allotments.shx  landuse_class_areas.csv  landuse_farmland.dbf  landuse_farmland.shp  landuse_farmland.shx  landuse_grass.dbf  landuse_grass.shp  landuse_grass.shx  landuse_meadow.dbf  landuse_meadow.shp  landuse_meadow.shx  landuse_orchard.dbf  landuse_orchard.shp  landuse_orchard.shx  landuse_park.dbf  landuse_park.shp  landuse_park.shx  landuse_residential.dbf  landuse_residential.shp  landuse_residential.shx  landuse_scrub.dbf  landuse_scrub.shp  landuse_scrub.shx
notebooks/: Vectors.ipynb
rsc/: requirements.yml
