[project]
name = "src-python-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "contextily>=1.6.2",
    "fiona>=1.10.1",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "shapely>=2.1.0",
]
